WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225166
[LFC][IFC] Incorrect middle alignment for inline boxes when line-height is present
https://bugs.webkit.org/show_bug.cgi?id=225166
Summary
[LFC][IFC] Incorrect middle alignment for inline boxes when line-height is pr...
alan
Reported
2021-04-28 15:11:59 PDT
<style> div { line-height: 30; } span { vertical-align: middle; } </style> <div style="background-color: green;">should<span>middle align</span></div>
Attachments
Patch
(6.38 KB, patch)
2021-04-28 16:46 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-04-28 15:12:15 PDT
<
rdar://77272112
>
alan
Comment 2
2021-04-28 16:46:24 PDT
Created
attachment 427307
[details]
Patch
EWS
Comment 3
2021-04-29 06:22:20 PDT
Committed
r276767
(
237154@main
): <
https://commits.webkit.org/237154@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427307
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug